# synthetic_playground

./: .gitignore  README.md  pyproject.toml
proc_transfer/: run_all.sh  run_brevo.sh  run_brevo_models.sh  run_depo.sh  run_depo_models.sh
proc_transfer/downstream/: shuffle_weights_utils.py  utils.py
proc_transfer/downstream/synthetic_playground/: common.py
proc_transfer/downstream/synthetic_playground/brevo/: brevo.py  brevo_train.py
proc_transfer/downstream/synthetic_playground/depo/: depo.py
proc_transfer/plotting/: depo_depth_test.py
