[project]
name = "synthetic-playground"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "numpy",
    "matplotlib",
    "fire",
]

[[tool.uv.indexes]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
