[project]
name = "synthetic-playground"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "numpy",
    "matplotlib",
    "fire",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
